sidemantic/adapters/holistics_grammar/HolisticsParser.py
# Generated from sidemantic/adapters/holistics_grammar/HolisticsParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HolisticsParser ( Parser ):

    grammarFileName = "HolisticsParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Model'", "'Dataset'", "'Relationship'", 
                     "'RelationshipConfig'", "'dimension'", "'measure'", 
                     "'metric'", "'Func'", "'Constant'", "'Module'", "'Extend'", 
                     "'extend'", "'use'", "'const'", "'if'", "'else'", "'true'", 
                     "'false'", "'null'", "<INVALID>", "'{'", "'}'", "'['", 
                     "']'", "'('", "')'", "':'", "','", "'.'", "'=>'", "'=='", 
                     "'!='", "'>='", "'<='", "'>'", "'<'", "'='", "'+'", 
                     "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'|'", 
                     "';'", "'-'" ]

    symbolicNames = [ "<INVALID>", "MODEL", "DATASET", "RELATIONSHIP", "RELATIONSHIP_CONFIG", 
                      "DIMENSION", "MEASURE", "METRIC", "FUNC", "CONSTANT", 
                      "MODULE", "EXTEND", "EXTEND_FUNC", "USE", "CONST", 
                      "IF", "ELSE", "TRUE", "FALSE", "NULL", "TAGGED_BLOCK", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", 
                      "RPAREN", "COLON", "COMMA", "DOT", "ARROW", "EQEQ", 
                      "NOTEQ", "GTE", "LTE", "GT", "LT", "EQUAL", "PLUS", 
                      "STAR", "SLASH", "PERCENT", "AND", "OR", "NOT", "PIPE", 
                      "SEMI", "DASH", "STRING", "NUMBER", "IDENTIFIER", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_document = 0
    RULE_statement = 1
    RULE_namedBlock = 2
    RULE_anonymousBlock = 3
    RULE_blockKeyword = 4
    RULE_property = 5
    RULE_constDeclaration = 6
    RULE_objectAssignment = 7
    RULE_valueAssignment = 8
    RULE_useStatement = 9
    RULE_usePath = 10
    RULE_useImportBlock = 11
    RULE_useImportItem = 12
    RULE_funcDeclaration = 13
    RULE_paramList = 14
    RULE_param = 15
    RULE_typeExpr = 16
    RULE_typePrimary = 17
    RULE_expressionStatement = 18
    RULE_block = 19
    RULE_expression = 20
    RULE_logicalOr = 21
    RULE_logicalAnd = 22
    RULE_equality = 23
    RULE_comparison = 24
    RULE_additive = 25
    RULE_multiplicative = 26
    RULE_unary = 27
    RULE_primary = 28
    RULE_ifExpression = 29
    RULE_typedBlock = 30
    RULE_blockLiteral = 31
    RULE_extendCall = 32
    RULE_extendTarget = 33
    RULE_extendArg = 34
    RULE_functionCall = 35
    RULE_callArg = 36
    RULE_callNamedArg = 37
    RULE_array = 38
    RULE_reference = 39
    RULE_qualifiedName = 40
    RULE_taggedBlock = 41
    RULE_string = 42
    RULE_number = 43
    RULE_boolean = 44
    RULE_nullValue = 45
    RULE_identifier = 46

    ruleNames =  [ "document", "statement", "namedBlock", "anonymousBlock", 
                   "blockKeyword", "property", "constDeclaration", "objectAssignment", 
                   "valueAssignment", "useStatement", "usePath", "useImportBlock", 
                   "useImportItem", "funcDeclaration", "paramList", "param", 
                   "typeExpr", "typePrimary", "expressionStatement", "block", 
                   "expression", "logicalOr", "logicalAnd", "equality", 
                   "comparison", "additive", "multiplicative", "unary", 
                   "primary", "ifExpression", "typedBlock", "blockLiteral", 
                   "extendCall", "extendTarget", "extendArg", "functionCall", 
                   "callArg", "callNamedArg", "array", "reference", "qualifiedName", 
                   "taggedBlock", "string", "number", "boolean", "nullValue", 
                   "identifier" ]

    EOF = Token.EOF
    MODEL=1
    DATASET=2
    RELATIONSHIP=3
    RELATIONSHIP_CONFIG=4
    DIMENSION=5
    MEASURE=6
    METRIC=7
    FUNC=8
    CONSTANT=9
    MODULE=10
    EXTEND=11
    EXTEND_FUNC=12
    USE=13
    CONST=14
    IF=15
    ELSE=16
    TRUE=17
    FALSE=18
    NULL=19
    TAGGED_BLOCK=20
    LBRACE=21
    RBRACE=22
    LBRACK=23
    RBRACK=24
    LPAREN=25
    RPAREN=26
    COLON=27
    COMMA=28
    DOT=29
    ARROW=30
    EQEQ=31
    NOTEQ=32
    GTE=33
    LTE=34
    GT=35
    LT=36
    EQUAL=37
    PLUS=38
    STAR=39
    SLASH=40
    PERCENT=41
    AND=42
    OR=43
    NOT=44
    PIPE=45
    SEMI=46
    DASH=47
    STRING=48
    NUMBER=49
    IDENTIFIER=50
    LINE_COMMENT=51
    BLOCK_COMMENT=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HolisticsParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HolisticsParser.StatementContext)
            else:
                return self.getTypedRuleContext(HolisticsParser.StatementContext,i)


        def getRuleIndex(self):
            return HolisticsParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = HolisticsParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2128654557507582) != 0):
                self.state = 94
                self.statement()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(HolisticsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namedBlock(self):
            return self.getTypedRuleContext(HolisticsParser.NamedBlockContext,0)


        def anonymousBlock(self):
            return self.getTypedRuleContext(HolisticsParser.AnonymousBlockContext,0)


        def property_(self):
            return self.getTypedRuleContext(HolisticsParser.PropertyContext,0)


        def constDeclaration(self):
            return self.getTypedRuleContext(HolisticsParser.ConstDeclarationContext,0)


        def objectAssignment(self):
            return self.getTypedRuleContext(HolisticsParser.ObjectAssignmentContext,0)


        def valueAssignment(self):
            return self.getTypedRuleContext(HolisticsParser.ValueAssignmentContext,0)


        def useStatement(self):
            return self.getTypedRuleContext(HolisticsParser.UseStatementContext,0)


        def funcDeclaration(self):
            return self.getTypedRuleContext(HolisticsParser.FuncDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(HolisticsParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return HolisticsParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = HolisticsParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.namedBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.anonymousBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.property_()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.constDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.objectAssignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.valueAssignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.useStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.funcDeclaration()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.expressionStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamedBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockKeyword(self):
            return self.getTypedRuleContext(HolisticsParser.BlockKeywordContext,0)


        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def block(self):
            return self.getTypedRuleContext(HolisticsParser.BlockContext,0)


        def getRuleIndex(self):
            return HolisticsParser.RULE_namedBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamedBlock" ):
                listener.enterNamedBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamedBlock" ):
                listener.exitNamedBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamedBlock" ):
                return visitor.visitNamedBlock(self)
            else:
                return visitor.visitChildren(self)




    def namedBlock(self):

        localctx = HolisticsParser.NamedBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namedBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.blockKeyword()
            self.state = 114
            self.identifier()
            self.state = 115
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnonymousBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockKeyword(self):
            return self.getTypedRuleContext(HolisticsParser.BlockKeywordContext,0)


        def block(self):
            return self.getTypedRuleContext(HolisticsParser.BlockContext,0)


        def getRuleIndex(self):
            return HolisticsParser.RULE_anonymousBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnonymousBlock" ):
                listener.enterAnonymousBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnonymousBlock" ):
                listener.exitAnonymousBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnonymousBlock" ):
                return visitor.visitAnonymousBlock(self)
            else:
                return visitor.visitChildren(self)




    def anonymousBlock(self):

        localctx = HolisticsParser.AnonymousBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_anonymousBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.blockKeyword()
            self.state = 118
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockKeywordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(HolisticsParser.MODEL, 0)

        def DATASET(self):
            return self.getToken(HolisticsParser.DATASET, 0)

        def RELATIONSHIP(self):
            return self.getToken(HolisticsParser.RELATIONSHIP, 0)

        def RELATIONSHIP_CONFIG(self):
            return self.getToken(HolisticsParser.RELATIONSHIP_CONFIG, 0)

        def DIMENSION(self):
            return self.getToken(HolisticsParser.DIMENSION, 0)

        def MEASURE(self):
            return self.getToken(HolisticsParser.MEASURE, 0)

        def METRIC(self):
            return self.getToken(HolisticsParser.METRIC, 0)

        def FUNC(self):
            return self.getToken(HolisticsParser.FUNC, 0)

        def CONSTANT(self):
            return self.getToken(HolisticsParser.CONSTANT, 0)

        def MODULE(self):
            return self.getToken(HolisticsParser.MODULE, 0)

        def EXTEND(self):
            return self.getToken(HolisticsParser.EXTEND, 0)

        def IDENTIFIER(self):
            return self.getToken(HolisticsParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_blockKeyword

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockKeyword" ):
                listener.enterBlockKeyword(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockKeyword" ):
                listener.exitBlockKeyword(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockKeyword" ):
                return visitor.visitBlockKeyword(self)
            else:
                return visitor.visitChildren(self)




    def blockKeyword(self):

        localctx = HolisticsParser.BlockKeywordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_blockKeyword)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1125899906846718) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropertyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(HolisticsParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(HolisticsParser.ExpressionContext,0)


        def getRuleIndex(self):
            return HolisticsParser.RULE_property

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty" ):
                listener.enterProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty" ):
                listener.exitProperty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProperty" ):
                return visitor.visitProperty(self)
            else:
                return visitor.visitChildren(self)




    def property_(self):

        localctx = HolisticsParser.PropertyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_property)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.identifier()
            self.state = 123
            self.match(HolisticsParser.COLON)
            self.state = 124
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(HolisticsParser.CONST, 0)

        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def EQUAL(self):
            return self.getToken(HolisticsParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(HolisticsParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(HolisticsParser.SEMI, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaration" ):
                return visitor.visitConstDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaration(self):

        localctx = HolisticsParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(HolisticsParser.CONST)
            self.state = 127
            self.identifier()
            self.state = 128
            self.match(HolisticsParser.EQUAL)
            self.state = 129
            self.expression()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 130
                self.match(HolisticsParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockKeyword(self):
            return self.getTypedRuleContext(HolisticsParser.BlockKeywordContext,0)


        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def EQUAL(self):
            return self.getToken(HolisticsParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(HolisticsParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(HolisticsParser.SEMI, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_objectAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectAssignment" ):
                listener.enterObjectAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectAssignment" ):
                listener.exitObjectAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectAssignment" ):
                return visitor.visitObjectAssignment(self)
            else:
                return visitor.visitChildren(self)




    def objectAssignment(self):

        localctx = HolisticsParser.ObjectAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_objectAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.blockKeyword()
            self.state = 134
            self.identifier()
            self.state = 135
            self.match(HolisticsParser.EQUAL)
            self.state = 136
            self.expression()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 137
                self.match(HolisticsParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueAssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def EQUAL(self):
            return self.getToken(HolisticsParser.EQUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(HolisticsParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(HolisticsParser.SEMI, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_valueAssignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueAssignment" ):
                listener.enterValueAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueAssignment" ):
                listener.exitValueAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueAssignment" ):
                return visitor.visitValueAssignment(self)
            else:
                return visitor.visitChildren(self)




    def valueAssignment(self):

        localctx = HolisticsParser.ValueAssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_valueAssignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.identifier()
            self.state = 141
            self.match(HolisticsParser.EQUAL)
            self.state = 142
            self.expression()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 143
                self.match(HolisticsParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def USE(self):
            return self.getToken(HolisticsParser.USE, 0)

        def usePath(self):
            return self.getTypedRuleContext(HolisticsParser.UsePathContext,0)


        def useImportBlock(self):
            return self.getTypedRuleContext(HolisticsParser.UseImportBlockContext,0)


        def SEMI(self):
            return self.getToken(HolisticsParser.SEMI, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_useStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseStatement" ):
                listener.enterUseStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseStatement" ):
                listener.exitUseStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseStatement" ):
                return visitor.visitUseStatement(self)
            else:
                return visitor.visitChildren(self)




    def useStatement(self):

        localctx = HolisticsParser.UseStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_useStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(HolisticsParser.USE)
            self.state = 147
            self.usePath()
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 148
                self.useImportBlock()


            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 151
                self.match(HolisticsParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsePathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qualifiedName(self):
            return self.getTypedRuleContext(HolisticsParser.QualifiedNameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(HolisticsParser.IdentifierContext,0)


        def getRuleIndex(self):
            return HolisticsParser.RULE_usePath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsePath" ):
                listener.enterUsePath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsePath" ):
                listener.exitUsePath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUsePath" ):
                return visitor.visitUsePath(self)
            else:
                return visitor.visitChildren(self)




    def usePath(self):

        localctx = HolisticsParser.UsePathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_usePath)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.qualifiedName()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseImportBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(HolisticsParser.LBRACE, 0)

        def useImportItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HolisticsParser.UseImportItemContext)
            else:
                return self.getTypedRuleContext(HolisticsParser.UseImportItemContext,i)


        def RBRACE(self):
            return self.getToken(HolisticsParser.RBRACE, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HolisticsParser.COMMA)
            else:
                return self.getToken(HolisticsParser.COMMA, i)

        def getRuleIndex(self):
            return HolisticsParser.RULE_useImportBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseImportBlock" ):
                listener.enterUseImportBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseImportBlock" ):
                listener.exitUseImportBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUseImportBlock" ):
                return visitor.visitUseImportBlock(self)
            else:
                return visitor.visitChildren(self)




    def useImportBlock(self):

        localctx = HolisticsParser.UseImportBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_useImportBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(HolisticsParser.LBRACE)
            self.state = 159
            self.useImportItem()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 160
                self.match(HolisticsParser.COMMA)
                self.state = 161
                self.useImportItem()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 167
            self.match(HolisticsParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseImportItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HolisticsParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(HolisticsParser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(HolisticsParser.COLON, 0)

        def getRuleIndex(self):
            return HolisticsParser.RULE_useImportItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseImportItem" ):
                listener.enterUseImportItem(self)
